--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,28 @@
 version: '3'
-services:
-    web: 
-      build: .
-  
-  vsplunk: 
-    image: busybox 
-    volumes: 
-      - vsplunk:/opt/splunk/etc 
-      - vsplunk:/opt/splunk/var 
-  splunkenterprise: 
-    #build: . 
-    hostname: splunkenterprise 
-    image: splunk/splunk:6.5.2 
-    environment: 
-      SPLUNK_START_ARGS: --accept-license
-      SPLUNK_ENABLE_LISTEN: 9997 
-      SPLUNK_ADD: tcp 1514 
-    volumes: 
-      - vsplunk:/opt/splunk/etc 
-      - vsplunk:/opt/splunk/var  
-    ports: 
-      - "8000:8000" 
-      - "9997:9997" 
-      - "8088:8088" 
-      - "1514:1514"
+
 volumes:
-  vsplunk:
+  opt-splunk-etc:
+  opt-splunk-var:
+
+services:
+  #web:
+  #  build: .
+  splunkenterprise:
+    #build: .
+    hostname: splunkenterprise
+    image: splunk/splunk:7.2.0
+    environment:
+      - SPLUNK_START_ARGS=--accept-license --no-prompt --answer-yes
+      - SPLUNK_ENABLE_LISTEN=9997
+      - SPLUNK_ADD=tcp 1514
+      - SPLUNK_USERNAME=admin
+      - SPLUNK_PASSWORD=password
+    volumes:
+      - opt-splunk-etc:/opt/splunk/etc
+      - opt-splunk-var:/opt/splunk/var
+    ports:
+      - "8000:8000"
+      - "9997:9997"
+      - "8088:8088"
+      - "1514:1514"
+insert employee  department    restart: always
