--- a/webtentacle/docker-compose.yml
+++ b/webtentacle/docker-compose.yml
@@ -5,20 +5,20 @@ volumes:
   opt-splunk-var:
 
 services:
-  web:
-    build: .
-    environment: 
-      - SPLUNK_WEBTENTACLE_PASSWORD=${SPLUNK_PASSWORD}
-      - SPLUNK_WEBTENTACLE_USER=${SPLUNK_USERNAME}
-      - MOTHER_HOSTNAME=${MOTHER_HOSTNAME}
-      - SPLUNK_INITIAL_PASSWORD=${SPLUNK_INITIAL_PASSWORD}
-    links:
-      - splunkenterprise
+  #web:
+  #  build: .
+  #  environment: 
+  #    - SPLUNK_WEBTENTACLE_PASSWORD=${SPLUNK_PASSWORD}
+  #    - SPLUNK_WEBTENTACLE_USER=${SPLUNK_USERNAME}
+  #    - MOTHER_HOSTNAME=${MOTHER_HOSTNAME}
+  #    - SPLUNK_INITIAL_PASSWORD=${SPLUNK_INITIAL_PASSWORD}
+  #  links:
+  #    - splunkenterprise
   splunkenterprise:
     hostname: splunkenterprise
     image: splunk/splunk:7.2.0
     restart: always
-    user: root
+    user: splunk
     environment:
       - SPLUNK_START_ARGS=--accept-license --answer-yes --no-prompt --seed-passwd ${SPLUNK_INITIAL_PASSWORD}
       - SPLUNK_ENABLE_LISTEN=9997
