--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,24 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Current File",
+            "name":"Python: Module",
+            "type":"python",
+            "request":"launch",
+            "module":"webtentacle",
+            "envFile": "${workspaceFolder}/webtentacle/dev.env"
+        },
+        {
+            "name": "Current file",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/main.py",
+            "program": "${file}",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Python: webtentacle main",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/webtentacle/__main__.py",
             "console": "integratedTerminal"
         },
         {
