logger to splunk

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,8 +6,8 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        - SPLUNK_API_KEY=${SPLUNK_API_KEY}
-        - SERVICE=${SERVICE}
-        - SPLUNK_API_PASSWORD=${SPLUNK_API_PASSWORD} 
-        - SPLUNK_HOSTNAME=${SPLUNK_HOSTNAME}
-        - SPLUNK_PORT=${SPLUNK_PORT}
+        - SPLUNK_API_KEY
+        - SERVICE
+        - SPLUNK_API_PASSWORD
+        - SPLUNK_HOSTNAME
+        - SPLUNK_PORT
